# DTW-project

./: .gitattributes  .gitignore  DTW-project.code-workspace  README.md  config.yaml  environment-core.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/: biosecurid_catalog.parquet  dtw_cache.parquet  pairs_meta.parquet
dtwproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
models/: diffdtw_baseline.py
notebooks/: 01_ingest.ipynb  02_eda.ipynb  03_pairing.ipynb  04_dtw_cache.ipynb  05_eval_baseline.ipynb  06_bounding_calibration.ipynb  07_nn_siamese.ipynb  EDA_full.ipynb  EDA_global.ipynb  EDA_local.ipynb  FirstTry.ipynb  Pipeline.ipynb  eval_baseline.ipynb  scripts.ipynb  train_diffdtw.ipynb
notebooks/.ipynb_checkpoints/: 02_eda-checkpoint.ipynb
notebooks/InitialTesting/: EDA_global.ipynb  eval_baseline.ipynb  scripts.ipynb
results/: baseline_metrics.csv  baseline_metrics.json  calibrated_metrics.json
src/: Loading.py  __init__.py  group_sessions.py  importData.py  io_1.py  main.py  parse.py  process_data.py
src/calibration/: calibration.py
src/data/: catalog.py  displayData.py  importData.py  import_data.py  loaders.py  pair_builder.py
src/dtw/: compute_dtw.py  core.py  dtwAlgorithm.py
src/evaluation/: evaluation.py
src/io/: load_biosecurid.py
src/keras_layers/: diff_dtw.py
src/nn_utils/: data.py  model.py  training.py
src/pairing/: make_pairs.py
src/pipeline/: compute_dtw.py  evaluate.py  (+1 more)
tests/: conftest.py  test_compute_dtw.py  test_diff_dtw.py  test_inspect_and_dtw.py  test_io.py  test_parse.py
(+2 files in other folders)
